<?xml version="1.0" encoding="utf-8"?>
<de.dlyt.yanndroid.oneui.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/theme">
        <HorizontalRadioPreference
            android:key="dark_mode"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreference
            android:key="dark_mode_auto"
            android:title="@string/system_default" />

        <ColorPickerPreference
            android:key="theme_color"
            android:summary="@string/theme_color_summary"
            android:title="@string/theme_color"
            app:pickerType="classic" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/general">
        <SwitchPreference
            android:defaultValue="true"
            android:key="keep_screen_on"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/appearance">
        <SwitchPreference
            android:defaultValue="true"
            android:key="grid_box_colors"
            android:summary="@string/grid_box_colors_summary"
            android:title="@string/grid_box_colors" />

        <SwitchPreference
            android:key="invert_colors"
            android:summary="@string/invert_colors_summary"
            android:title="@string/invert_colors" />

        <ColorPickerPreference
            android:key="hint_color"
            android:summary="@string/hint_color_summary"
            android:title="@string/hint_color"
            app:pickerType="classic" />

        <ColorPickerPreference
            android:key="error_color"
            android:summary="@string/error_color_summary"
            android:title="@string/error_color"
            app:pickerType="classic" />
    </PreferenceCategory>


    <PreferenceCategory
        android:key="dev_options"
        android:title="@string/dev_options">
        <SwitchPreference
            android:defaultValue="true"
            android:key="secure_flag"
            android:summary="@string/secure_flag_summary"
            android:title="@string/secure_flag" />
    </PreferenceCategory>


    <PreferenceCategory>
        <PreferenceScreen
            android:key="how_to_play"
            android:title="@string/how_to_play" />

        <PreferenceScreen
            android:key="restore_all_settings"
            android:title="@string/restore_all_settings" />

        <PreferenceScreen
            android:key="about_app"
            android:title="@string/about_sudoku">
            <intent
                android:targetClass="de.dlyt.yanndroid.sudoku.AboutActivity"
                android:targetPackage="de.dlyt.yanndroid.sudoku" />
        </PreferenceScreen>
    </PreferenceCategory>

</de.dlyt.yanndroid.oneui.preference.PreferenceScreen>