<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.dlyt.yanndroid.movies.AppInfoActivity">

    <group
        android:id="@+id/playable_group"
        android:visible="false">
        <item
            android:id="@+id/menu_undo"
            android:icon="@drawable/ic_samsung_undo"
            android:title="@string/undo"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_pause"
            android:icon="@drawable/ic_samsung_pause"
            android:title="@string/pause"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_show_errors"
            android:title="@string/show_errors"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_solve"
            android:title="@string/solution"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menu_duplicate"
        android:title="@string/duplicate"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        app:showAsAction="never" />

</menu>