<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <de.dlyt.yanndroid.oneui.drawer.OptionGroup
        android:id="@+id/optionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectedOptionButton="@id/play_sudoku">

        <de.dlyt.yanndroid.oneui.drawer.OptionButton
            android:id="@+id/play_sudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_samsung_play"
            app:text="@string/play_sudoku" />

        <de.dlyt.yanndroid.oneui.drawer.OptionButton
            android:id="@+id/solve_sudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_samsung_unlock"
            app:text="@string/solve_sudoku" />

    </de.dlyt.yanndroid.oneui.drawer.OptionGroup>

    <View style="@style/DrawerDividerStyle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/newSudoku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical|left"
            android:onClick="newSudoku"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_samsung_plus"
                app:tint="@color/green" />

            <com.google.android.material.textview.MaterialTextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/new_sudoku"
                android:textAlignment="viewStart"
                android:textSize="18dp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="26dp"
        android:scrollbars="vertical" />


</LinearLayout>